# slough

./: .gitignore  .gitmodules  README.md  animation.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: animation.html  animation.py  test_cases.json
examples/two-sum/: README.md  solution.py
src/slough/: __init__.py  __main__.py  animation.py  cli.py  formatter.py  html_animation.py  models.py  parser.py  runner.py  tracer.py
src/slough/templates/: animation.py
tests/: conftest.py  test_animation.py  test_anomaly.py  test_boundary.py  test_cli.py  test_formatter.py  test_models.py  test_parser.py  test_property.py  test_regression.py  test_runner.py  test_tracer.py
